[package]
name = "infinite_context_engine"
version = "0.1.0"
edition = "2021"
autobins = false

[[bench]]
name = "context_manager_bench"
path = "src/bin/context_manager.rs"
harness = false

[dependencies]
tokio = { version = "1.38", features = ["full"] }
memmap2 = "0.9"
rand = "0.8"
zerocopy = { version = "0.7", features = ["derive"] }
pyo3 = { version = "0.21", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }